WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314365
minimumExpectedMinimumTime is never set for WebM, causing unbounded decode.
https://bugs.webkit.org/show_bug.cgi?id=314365
Summary
minimumExpectedMinimumTime is never set for WebM, causing unbounded decode.
Jean-Yves Avenard [:jya]
Reported
2026-05-07 21:09:09 PDT
regression from
312763@main
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-05-07 21:09:16 PDT
<
rdar://problem/176522504
>
Jean-Yves Avenard [:jya]
Comment 2
2026-05-08 00:03:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64525
EWS
Comment 3
2026-05-09 08:12:49 PDT
Committed
312948@main
(f63c6d82be9d): <
https://commits.webkit.org/312948@main
> Reviewed commits have been landed. Closing PR #64525 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug