(312763@main) minimumUpcomingTime is never set for WebM, causing unbounded decode. https://bugs.webkit.org/show_bug.cgi?id=314365 rdar://176522504

Reviewed by Gerald Squelart.

minimumUpcomingTime wasn't supplied by the MediaPlayerPrivateWebM
and so the VideoMediaSampleRenderer would treat it as if future b-frame were
to come, never limiting the decoder.

We now make the minimumUpcomingTime argument a three-state value
instead.

No change in JS observable behaviours. Manually verified through logging
that all was behaving as expected.

* Source/WebCore/platform/graphics/AudioVideoRenderer.h:
* Source/WebCore/platform/graphics/cocoa/VideoMediaSampleRenderer.mm:
(WebCore::VideoMediaSampleRenderer::decodeNextSampleIfNeeded):

Canonical link: https://commits.webkit.org/312948@main